# Copyright (C) 2024 originalFactor
# 
# This file is part of BiliAPI.
# 
# BiliAPI is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# BiliAPI is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with BiliAPI.  If not, see <https://www.gnu.org/licenses/>.

[tool.poetry]
name = "biliapi"
version = "0.1.0"
description = "A simple SDK for querying api.bilibili.com. Based on pydantic so you needn't any documents."
authors = ["originalFactor <2438926613@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"
brotlipy = "^0.7.0"
zstandard = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
